--- a/index-newly.html
+++ b/index-newly.html
@@ -25,6 +25,12 @@
       <th><a href="http://hankyungkr.devcraft.kr/page13-newly-pc.html" target="_blank">13.컨센서스</a></th>
     </tr>
     <tr>
+      <th><a href="http://hankyungkr.devcraft.kr/hk-money-pc.html" target="_blank">한경머니</a></th>
+    </tr>
+
+
+
+    <tr>
       <th colspan="2" style="font-size:25px; height:45px; text-align: center;">MOBILE</th>
     </tr>
     <tr>
@@ -32,6 +38,9 @@
     </tr>
     <tr>
       <th><a href="http://hankyungkr.devcraft.kr/page19-newly-mo.html" target="_blank">M13.컨센서스</a></th>
+    </tr>
+    <tr>
+      <th><a href="http://hankyungkr.devcraft.kr/hk-money-mo.html" target="_blank">한경머니</a></th>
     </tr>
   </table>
 </body>
