--- a/page10-mo.html
+++ b/page10-mo.html
@@ -44,7 +44,15 @@
     <div class="inner">
       <!-- **********외주 콘텐츠 작업 영역********** -->
 
-      <div class="fiq-wrap">
+
+
+
+
+
+
+
+<!-- ####### 3.16 수정 fiq-wrap클래스에 fiq-newly 추가#######-->
+      <div class="fiq-wrap fiq-newly">
         <article class="fiq-article fiq-m10">
           <section class="fiq-section fiq-sec1">
             <div class="fiq-tab-wrap fiq-tab-wrap1 fiq-tab-active1">
@@ -104,7 +112,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
+                    <tr class="fiq-up">
                       <td class="txt-num">2021-12-22</td>
                       <td class="txt-num fiq-down">-499,763</td>
                       <td class="txt-num fiq-up">416,006</td>
@@ -118,7 +126,7 @@
                       <td class="txt-num fiq-up">96,123</td>
                       <td class="txt-num fiq-up">123,456</td>
                     </tr>
-                    <tr>
+                    <tr  class="fiq-down">
                       <td class="txt-num">2021-12-21</td>
                       <td class="txt-num fiq-down">-499,763</td>
                       <td class="txt-num fiq-up">416,006</td>
@@ -789,6 +797,211 @@
               </div>
             </div>
 
+
+
+
+
+
+
+
+
+
+<!-- -------------------------####### 03.19 추가 #######-->
+            <!-- ####### 프로그램매매동향 탭 #######-->
+            <div class="fiq-cont fiq-cont2">
+              <div class="fiq-inner-tab-wrap fiq-inner-tab-wrap2 fiq-inner-tabs-2n fiq-inner-active1">
+                <a class="fiq-a fiq-inner-tab fiq-inner-tab1">코스피</a>
+                <a class="fiq-a fiq-inner-tab fiq-inner-tab2">코스닥</a>
+              </div>
+
+              <div class="fiq-cont-inner-wrap fiq-cont-inner-wrap1">
+                <div class="fiq-depth-table fiq-depth-table1">
+                  <table cellspacing="0" cellpadding="0" border="0" class="fiq-t">
+                    <colgroup>
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                    </colgroup>
+                    <thead>
+                    <tr>
+                      <th rowspan="2">일자</th>
+                      <th colspan="3">차익거래(금액)</th>
+                      <th colspan="3">비차익거래(금액)</th>
+                      <th colspan="3">전체(금액)</th>
+                    </tr>
+                    <tr>
+                      <th>매수</th>
+                      <th>매도</th>
+                      <th>순매수</th>
+                      <th>매수</th>
+                      <th>매도</th>
+                      <th>순매수</th>
+                      <th>매수</th>
+                      <th>매도</th>
+                      <th>순매수</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr class="fiq-up">
+                      <td class="txt-num">2021-12-22</td>
+                      <td class="txt-num fiq-down">-499,763</td>
+                      <td class="txt-num fiq-up">416,006</td>
+                      <td class="txt-num fiq-up">61,277</td>
+                      <td class="txt-num fiq-up">68,733</td>
+                      <td class="txt-num fiq-up">53,122</td>
+                      <td class="txt-num fiq-down">-45,123</td>
+                      <td class="txt-num fiq-down">-45,365</td>
+                      <td class="txt-num fiq-down">-78,315</td>
+                      <td class="txt-num fiq-up">46,528</td>
+                    </tr>
+                    <tr  class="fiq-down">
+                      <td class="txt-num">2021-12-22</td>
+                      <td class="txt-num fiq-down">-499,763</td>
+                      <td class="txt-num fiq-up">416,006</td>
+                      <td class="txt-num fiq-up">61,277</td>
+                      <td class="txt-num fiq-up">68,733</td>
+                      <td class="txt-num fiq-up">53,122</td>
+                      <td class="txt-num fiq-down">-45,123</td>
+                      <td class="txt-num fiq-down">-45,365</td>
+                      <td class="txt-num fiq-down">-78,315</td>
+                      <td class="txt-num fiq-up">46,528</td>
+                    </tr>
+                    <tr>
+                      <td class="txt-num">2021-12-22</td>
+                      <td class="txt-num fiq-down">-499,763</td>
+                      <td class="txt-num fiq-up">416,006</td>
+                      <td class="txt-num fiq-up">61,277</td>
+                      <td class="txt-num fiq-up">68,733</td>
+                      <td class="txt-num fiq-up">53,122</td>
+                      <td class="txt-num fiq-down">-45,123</td>
+                      <td class="txt-num fiq-down">-45,365</td>
+                      <td class="txt-num fiq-down">-78,315</td>
+                      <td class="txt-num fiq-up">46,528</td>
+                    </tr>
+                    <tr>
+                      <td class="txt-num">2021-12-22</td>
+                      <td class="txt-num fiq-down">-499,763</td>
+                      <td class="txt-num fiq-up">416,006</td>
+                      <td class="txt-num fiq-up">61,277</td>
+                      <td class="txt-num fiq-up">68,733</td>
+                      <td class="txt-num fiq-up">53,122</td>
+                      <td class="txt-num fiq-down">-45,123</td>
+                      <td class="txt-num fiq-down">-45,365</td>
+                      <td class="txt-num fiq-down">-78,315</td>
+                      <td class="txt-num fiq-up">46,528</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+              <div class="fiq-cont-inner-wrap fiq-cont-inner-wrap2">
+                <div class="fiq-depth-table fiq-depth-table1">
+                  <table cellspacing="0" cellpadding="0" border="0" class="fiq-t">
+                    <colgroup>
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                      <col width="10%">
+                    </colgroup>
+                    <thead>
+                    <tr>
+                      <th rowspan="2">일자</th>
+                      <th colspan="3">차익거래(금액)</th>
+                      <th colspan="3">비차익거래(금액)</th>
+                      <th colspan="3">전체(금액)</th>
+                    </tr>
+                    <tr>
+                      <th>매수</th>
+                      <th>매도</th>
+                      <th>순매수</th>
+                      <th>매수</th>
+                      <th>매도</th>
+                      <th>순매수</th>
+                      <th>매수</th>
+                      <th>매도</th>
+                      <th>순매수</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr class="fiq-up">
+                      <td class="txt-num">2021-12-22</td>
+                      <td class="txt-num fiq-down">-499,763</td>
+                      <td class="txt-num fiq-up">416,006</td>
+                      <td class="txt-num fiq-up">61,277</td>
+                      <td class="txt-num fiq-up">68,733</td>
+                      <td class="txt-num fiq-up">53,122</td>
+                      <td class="txt-num fiq-down">-45,123</td>
+                      <td class="txt-num fiq-down">-45,365</td>
+                      <td class="txt-num fiq-down">-78,315</td>
+                      <td class="txt-num fiq-up">46,528</td>
+                    </tr>
+                    <tr  class="fiq-down">
+                      <td class="txt-num">2021-12-22</td>
+                      <td class="txt-num fiq-down">-499,763</td>
+                      <td class="txt-num fiq-up">416,006</td>
+                      <td class="txt-num fiq-up">61,277</td>
+                      <td class="txt-num fiq-up">68,733</td>
+                      <td class="txt-num fiq-up">53,122</td>
+                      <td class="txt-num fiq-down">-45,123</td>
+                      <td class="txt-num fiq-down">-45,365</td>
+                      <td class="txt-num fiq-down">-78,315</td>
+                      <td class="txt-num fiq-up">46,528</td>
+                    </tr>
+                    <tr>
+                      <td class="txt-num">2021-12-22</td>
+                      <td class="txt-num fiq-down">-499,763</td>
+                      <td class="txt-num fiq-up">416,006</td>
+                      <td class="txt-num fiq-up">61,277</td>
+                      <td class="txt-num fiq-up">68,733</td>
+                      <td class="txt-num fiq-up">53,122</td>
+                      <td class="txt-num fiq-down">-45,123</td>
+                      <td class="txt-num fiq-down">-45,365</td>
+                      <td class="txt-num fiq-down">-78,315</td>
+                      <td class="txt-num fiq-up">46,528</td>
+                    </tr>
+                    <tr>
+                      <td class="txt-num">2021-12-22</td>
+                      <td class="txt-num fiq-down">-499,763</td>
+                      <td class="txt-num fiq-up">416,006</td>
+                      <td class="txt-num fiq-up">61,277</td>
+                      <td class="txt-num fiq-up">68,733</td>
+                      <td class="txt-num fiq-up">53,122</td>
+                      <td class="txt-num fiq-down">-45,123</td>
+                      <td class="txt-num fiq-down">-45,365</td>
+                      <td class="txt-num fiq-down">-78,315</td>
+                      <td class="txt-num fiq-up">46,528</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+<!-- -------------------------####### 03.19 추가 끝 #######-->
+
+
+
+
+
+
+
+
+
+
+
+
             <!-- ####### 외국인매매 탭 #######-->
             <div class="fiq-cont fiq-cont3">
               <div class="fiq-inner-tab-wrap fiq-inner-tab-wrap3 fiq-inner-tabs-2n fiq-inner-active1">
@@ -813,7 +1026,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
+                    <tr class="fiq-up">
                       <td>SK하이닉스</td>
                       <td class="txt-num">193,857</td>
                     </tr>
@@ -844,7 +1057,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
+                    <tr class="fiq-down">
                       <td>SK하이닉스</td>
                       <td class="txt-num">193,857</td>
                     </tr>
