--- a/page2-1-newly-pc.html
+++ b/page2-1-newly-pc.html
@@ -352,19 +352,23 @@
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
               </div>
 
+
+
+
+<!-- ####### 3.17 수정 #######-->
               <div class="fiq-cont fiq-cont1 fiq-page2-1">
                 <table cellspacing="0" cellpadding="0" border="0" class="fiq-t">
                   <colgroup>
-                    <col width="295">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
+                    <col width="180">
+                    <col width="100">
+                    <col width="100">
+                    <col width="100">
+                    <col width="100">
+                    <col width="100">
+                    <col width="100">
+                    <col width="100">
+                    <col width="100">
+                    <col width="80">
                     <col width="60">
                     <col width="60">
                   </colgroup>
@@ -388,7 +392,7 @@
                   <!-- ####### td에 fiq-down클래스 들어가면 등락률칸에 하락 파란색 #######-->
                   <tbody>
                   <tr class="fiq-up">
-                    <td>넥스트사이언스<br><span class="code">00354</span></td>
+                    <td>넥스트사이언스<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">530,200</td>
                     <td class="txt-num"><span></span>13,000</td>
                     <td class="txt-num">+3.93%</td>
@@ -401,8 +405,8 @@
                     <td class="txt-num">34.25</td>
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
-                  <tr class="fiq-up">
-                    <td>대성산업<br><span class="code">00354</span></td>
+                  <tr class="">
+                    <td>대성산업<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">3,010</td>
                     <td class="txt-num"><span></span>800</td>
                     <td class="txt-num">+0.36%</td>
@@ -416,7 +420,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>카카오<br><span class="code">00354</span></td>
+                    <td>카카오<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">24,710</td>
                     <td class="txt-num"><span></span>2,500</td>
                     <td class="txt-num">+2.00%</td>
@@ -430,7 +434,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>비케이탑스<br><span class="code">00354</span></td>
+                    <td>비케이탑스<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">6,820</td>
                     <td class="txt-num"><span></span>3,000</td>
                     <td class="txt-num">+3.93%</td>
@@ -444,7 +448,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>신세계 I&C<br><span class="code">00354</span></td>
+                    <td>신세계 I&C<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">713,700</td>
                     <td class="txt-num"><span></span>43,000</td>
                     <td class="txt-num">+1.69%</td>
@@ -458,7 +462,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>삼성바이오로직스<br><span class="code">00354</span></td>
+                    <td>삼성바이오로직스<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">530,200</td>
                     <td class="txt-num"><span></span>8,300</td>
                     <td class="txt-num">-3.79%</td>
@@ -472,7 +476,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>카카오뱅크<br><span class="code">00354</span></td>
+                    <td>카카오뱅크<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">3,010</td>
                     <td class="txt-num"><span></span>16,200</td>
                     <td class="txt-num">+0.36%</td>
@@ -486,7 +490,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>퓨런티어<br><span class="code">00354</span></td>
+                    <td>퓨런티어<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">24,710</td>
                     <td class="txt-num"><span></span>150</td>
                     <td class="txt-num">+2.00%</td>
@@ -500,7 +504,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>네이버<br><span class="code">00354</span></td>
+                    <td>네이버<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">6,820</td>
                     <td class="txt-num"><span></span>8,150</td>
                     <td class="txt-num">+3.93%</td>
@@ -514,7 +518,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>풀무원<br><span class="code">00354</span></td>
+                    <td>풀무원<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">713,700</td>
                     <td class="txt-num"><span></span>1,300</td>
                     <td class="txt-num">-13.69%</td>
@@ -528,7 +532,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>넥스트사이언스<br><span class="code">00354</span></td>
+                    <td>넥스트사이언스<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">530,200</td>
                     <td class="txt-num"><span></span>880</td>
                     <td class="txt-num">-0.74%</td>
@@ -542,7 +546,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>대성산업<br><span class="code">00354</span></td>
+                    <td>대성산업<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">3,010</td>
                     <td class="txt-num"><span></span>3,700</td>
                     <td class="txt-num">+3.93%</td>
@@ -556,7 +560,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>카카오<br><span class="code">00354</span></td>
+                    <td>카카오<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">24,710</td>
                     <td class="txt-num"><span></span>1,300</td>
                     <td class="txt-num">-8.21%</td>
@@ -570,7 +574,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>비케이탑스<br><span class="code">00354</span></td>
+                    <td>비케이탑스<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">6,820</td>
                     <td class="txt-num"><span></span>300</td>
                     <td class="txt-num">-17.73%</td>
@@ -584,7 +588,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>신세계 I&C<br><span class="code">00354</span></td>
+                    <td>신세계 I&C<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">713,700</td>
                     <td class="txt-num"><span class="fiq-increase"></span>13,700</td>
                     <td class="txt-num">+3.93%</td>
@@ -603,16 +607,16 @@
               <div class="fiq-cont fiq-cont2 fiq-page2-1">
                 <table cellspacing="0" cellpadding="0" border="0" class="fiq-t">
                   <colgroup>
-                    <col width="295">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
-                    <col width="85">
+                    <col width="180">
+                    <col width="100">
+                    <col width="100">
+                    <col width="100">
+                    <col width="100">
+                    <col width="100">
+                    <col width="100">
+                    <col width="100">
+                    <col width="100">
+                    <col width="80">
                     <col width="60">
                     <col width="60">
                   </colgroup>
@@ -636,7 +640,7 @@
                   <!-- ####### td에 fiq-down클래스 들어가면 등락률칸에 하락 파란색 #######-->
                   <tbody>
                   <tr class="fiq-up">
-                    <td>넥스트사이언스<br><span class="code">00354</span></td>
+                    <td>넥스트사이언스<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">530,200</td>
                     <td class="txt-num"><span></span>13,000</td>
                     <td class="txt-num">+3.93%</td>
@@ -649,8 +653,8 @@
                     <td class="txt-num">34.25</td>
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
-                  <tr class="fiq-up">
-                    <td>대성산업<br><span class="code">00354</span></td>
+                  <tr class="">
+                    <td>대성산업<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">3,010</td>
                     <td class="txt-num"><span></span>800</td>
                     <td class="txt-num">+0.36%</td>
@@ -664,7 +668,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>카카오<br><span class="code">00354</span></td>
+                    <td>카카오<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">24,710</td>
                     <td class="txt-num"><span></span>2,500</td>
                     <td class="txt-num">+2.00%</td>
@@ -678,7 +682,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>비케이탑스<br><span class="code">00354</span></td>
+                    <td>비케이탑스<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">6,820</td>
                     <td class="txt-num"><span></span>3,000</td>
                     <td class="txt-num">+3.93%</td>
@@ -692,7 +696,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>신세계 I&C<br><span class="code">00354</span></td>
+                    <td>신세계 I&C<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">713,700</td>
                     <td class="txt-num"><span></span>43,000</td>
                     <td class="txt-num">+1.69%</td>
@@ -706,7 +710,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>삼성바이오로직스<br><span class="code">00354</span></td>
+                    <td>삼성바이오로직스<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">530,200</td>
                     <td class="txt-num"><span></span>8,300</td>
                     <td class="txt-num">-3.79%</td>
@@ -720,7 +724,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>카카오뱅크<br><span class="code">00354</span></td>
+                    <td>카카오뱅크<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">3,010</td>
                     <td class="txt-num"><span></span>16,200</td>
                     <td class="txt-num">+0.36%</td>
@@ -734,7 +738,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>퓨런티어<br><span class="code">00354</span></td>
+                    <td>퓨런티어<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">24,710</td>
                     <td class="txt-num"><span></span>150</td>
                     <td class="txt-num">+2.00%</td>
@@ -748,7 +752,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>네이버<br><span class="code">00354</span></td>
+                    <td>네이버<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">6,820</td>
                     <td class="txt-num"><span></span>8,150</td>
                     <td class="txt-num">+3.93%</td>
@@ -762,7 +766,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>풀무원<br><span class="code">00354</span></td>
+                    <td>풀무원<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">713,700</td>
                     <td class="txt-num"><span></span>1,300</td>
                     <td class="txt-num">-13.69%</td>
@@ -776,7 +780,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>넥스트사이언스<br><span class="code">00354</span></td>
+                    <td>넥스트사이언스<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">530,200</td>
                     <td class="txt-num"><span></span>880</td>
                     <td class="txt-num">-0.74%</td>
@@ -790,7 +794,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>대성산업<br><span class="code">00354</span></td>
+                    <td>대성산업<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">3,010</td>
                     <td class="txt-num"><span></span>3,700</td>
                     <td class="txt-num">+3.93%</td>
@@ -804,7 +808,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>카카오<br><span class="code">00354</span></td>
+                    <td>카카오<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">24,710</td>
                     <td class="txt-num"><span></span>1,300</td>
                     <td class="txt-num">-8.21%</td>
@@ -818,7 +822,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>비케이탑스<br><span class="code">00354</span></td>
+                    <td>비케이탑스<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">6,820</td>
                     <td class="txt-num"><span></span>300</td>
                     <td class="txt-num">-17.73%</td>
@@ -832,7 +836,7 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>신세계 I&C<br><span class="code">00354</span></td>
+                    <td>신세계 I&C<br><span class="fiq-code">00354</span></td>
                     <td class="txt-num">713,700</td>
                     <td class="txt-num"><span class="fiq-increase"></span>13,700</td>
                     <td class="txt-num">+3.93%</td>
@@ -848,20 +852,15 @@
                   </tbody>
                 </table>
               </div>
+<!-- ####### 3.17 수정 끝 #######-->
+
+
+
+
+
+
 
             </div>
-
-            <!-- ####### 시가총액 탭 #######-->
-
-            <!-- ####### 거래량 탭 #######-->
-
-            <!-- ####### 상승종목 탭 #######-->
-
-            <!-- ####### 하락종목 탭 #######-->
-
-            <!-- ####### 신규상장 탭 #######-->
-
-            <!-- ####### 관리종목 탭 #######-->
           </section>
 
         </article>
