--- a/page2-6-pc.html
+++ b/page2-6-pc.html
@@ -328,9 +328,18 @@
     <!-- [D] 파이낸셜아이큐 클래스 : .fiq-* 사용 -->
   <div id="container" class="fiq-container">
     <div class="inner">
-      <div class="fiq-wrap">
+
+
+
+<!-- ####### 3.16 수정 fiq-wrap클래스에 fiq-newly 추가#######-->
+      <div class="fiq-wrap fiq-newly">
         <article class="fiq-article fiq-page1s">
-          <section class="fiq-section">
+          <section class="fiq-section" style="margin-top: 50px;">
+<!-- ####### 3.16 수정 끝 #######-->
+
+
+
+
             <div class="fiq-top-wrap">
               <h3 class="fiq-h3-2">증시자금 동향</h3>
               <div class="fiq-date">
@@ -339,7 +348,20 @@
               </div>
             </div>
 
-            <div class="fiq-tab-wrap fiq-tab-wrap1 fiq-tab2n fiq-tab1-active fiq-wide">
+
+
+
+<!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
+            <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap1 fiq-tab2n fiq-tab1-active fiq-wide" style="text-align: left;">
+<!-- ####### 3.16 수정 끝 #######-->
+
+
+
+
+
+
+
+
               <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">고객예탁금, 선물예수금, 미수금, 신용융자</a>
               <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">주식형, 채권형, 혼합형, MMF</a>
             </div>
