--- a/page5-pc.html
+++ b/page5-pc.html
@@ -328,9 +328,27 @@
     <!-- [D] 파이낸셜아이큐 클래스 : .fiq-* 사용 -->
   <div id="container" class="fiq-container">
     <div class="inner">
-      <div class="fiq-wrap">
+
+
+
+
+<!-- ####### 3.16 수정 fiq-wrap클래스에 fiq-newly 추가#######-->
+      <div class="fiq-wrap fiq-newly">
         <article class="fiq-article fiq-page1s">
+
+          <div class="fiq-top-title">
+            <h2 class="fiq-h2">ETF</h2>
+          </div>
           <section class="fiq-section">
+<!-- ####### 3.16 수정 끝 #######-->
+
+
+
+
+
+
+
+
             <div class="fiq-tabs-wrap fiq-tabs-wrap1 fiq-tabs-wrap-2n fiq-top-active1">
               <a class="fiq-a fiq-top-tab fiq-top-tab1" data-tab-cl="1">ETF</a>
               <a class="fiq-a fiq-top-tab fiq-top-tab2" data-tab-cl="2">ETN</a>
@@ -338,9 +356,6 @@
 
             <!-- ####### ETF 탭 #######-->
             <div class="fiq-tab-sibl fiq-tab-sibl1">
-              <div class="fiq-top-wrap">
-                <h3 class="fiq-h3-2 txt-en">ETF</h3>
-              </div>
               <div class="fiq-cont fiq-page1-6 fiq-page5">
                 <table cellspacing="0" cellpadding="0" border="0" class="fiq-t">
                   <colgroup>
@@ -417,9 +432,6 @@
 
             <!-- ####### ETF 탭 #######-->
             <div class="fiq-tab-sibl fiq-tab-sibl2">
-              <div class="fiq-top-wrap">
-                <h3 class="fiq-h3-2 txt-en">ETN</h3>
-              </div>
               <div class="fiq-cont fiq-page1-6 fiq-page5">
                 <table cellspacing="0" cellpadding="0" border="0" class="fiq-t">
                   <colgroup>
