--- a/page9-mo.html
+++ b/page9-mo.html
@@ -44,7 +44,13 @@
     <div class="inner">
       <!-- **********외주 콘텐츠 작업 영역********** -->
 
-      <div class="fiq-wrap">
+
+
+
+
+
+<!-- ####### 3.16 수정 fiq-wrap클래스에 fiq-newly 추가#######-->
+      <div class="fiq-wrap fiq-newly">
         <article class="fiq-article fiq-m9">
           <section class="fiq-section fiq-sec1">
             <div class="fiq-tab-wrap fiq-tab-wrap1 fiq-tab-active1">
