--- a/page1-newly-mo.html
+++ b/page1-newly-mo.html
@@ -47,7 +47,7 @@
       <div class="fiq-wrap fiq-newly">
         <article class="fiq-article fiq-m2">
           <section class="fiq-section fiq-sec1">
-            <div class="fiq-tab-wrap fiq-tab-type-a fiq-tab-wrap1 fiq-tab-active6">
+            <div class="fiq-tab-wrap fiq-tab-type-a fiq-tab-wrap1 fiq-tab-active1">
               <a class="fiq-a fiq-tab fiq-tab1">코스피</a>
               <a class="fiq-a fiq-tab fiq-tab2">코스닥</a>
               <a class="fiq-a fiq-tab fiq-tab3">코스피2000</a>
@@ -146,16 +146,55 @@
                 <img src="img/mo/graph1.png" alt="" style="display: block; width: 100%;height: 100%;">
               </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- -------------------------####### 03.19 수정 #######-->
               <div class="fiq-section fiq-sec2">
-                <div class="fiq-tab-wrap fiq-tab-type-b fiq-tabs-6n fiq-tab-wrap2 fiq-tab-active2">
-                  <a class="fiq-a fiq-tab fiq-tab1">종합</a>
-                  <a class="fiq-a fiq-tab fiq-tab2">뉴스</a>
-                  <a class="fiq-a fiq-tab fiq-tab3">종목</a>
-                  <a class="fiq-a fiq-tab fiq-tab4">토론</a>
+                <div class="fiq-tab-wrap fiq-tab-type-b fiq-tabs-6n fiq-tab-wrap2 fiq-tab-active1">
+                  <a class="fiq-a fiq-tab fiq-tab1">뉴스</a>
+                  <a class="fiq-a fiq-tab fiq-tab2">종목</a>
+                  <a class="fiq-a fiq-tab fiq-tab3">시세</a>
+                  <a class="fiq-a fiq-tab fiq-tab4">리포트</a>
                 </div>
 
-                <!-- ####### 종합 탭 #######-->
+                <!-- ####### 뉴스 탭 #######-->
                 <div class="fiq-cont fiq-cont1">
+                  <ul class="fiq-news-list">
+                    <li>
+                      <img src="img/mo/img1.png" alt="">
+                      [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
+                      <span>2021.12.16</span>
+                    </li>
+                    <li>
+                      <img src="img/mo/img1.png" alt="">
+                      [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
+                      <span>2021.12.16</span>
+                    </li>
+                    <li>
+                      [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
+                      <span>2021.12.16</span>
+                    </li>
+                    <li>
+                      <img src="img/mo/img1.png" alt="">
+                      [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
+                      <span>2021.12.16</span>
+                    </li>
+                  </ul>
+                  <a class="fiq-more-btn">더보기</a>
+                </div>
+
+                <!-- ####### 종목 탭 #######-->
+                <div class="fiq-cont fiq-cont2">
                   <table cellspacing="0" cellpadding="0" border="0" class="fiq-t">
                     <col width="45%">
                     <col width="35%">
@@ -199,30 +238,192 @@
                     </tbody>
                   </table>
                 </div>
-                <!-- ####### 뉴스 탭 #######-->
-                <div class="fiq-cont fiq-cont2">
-                  <ul class="fiq-news-list">
-                    <li>
-                      <img src="img/mo/img1.png" alt="">
-                      [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
-                      <span>2021.12.16</span>
-                    </li>
-                    <li>
-                      <img src="img/mo/img1.png" alt="">
-                      [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
-                      <span>2021.12.16</span>
-                    </li>
-                    <li>
-                      [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
-                      <span>2021.12.16</span>
-                    </li>
-                    <li>
-                      <img src="img/mo/img1.png" alt="">
-                      [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
-                      <span>2021.12.16</span>
-                    </li>
-                  </ul>
-                  <a class="fiq-more-btn">더보기</a>
+
+                <!-- ####### 시세 탭 #######-->
+                <div class="fiq-cont fiq-cont3">
+                  <table cellspacing="0" cellpadding="0" border="0" class="fiq-t">
+                    <col width="45%">
+                    <col width="35%">
+                    <col width="20%">
+                    <tbody>
+                    <tr class="fiq-up">
+                      <td>삼성전자 <span class="txt-num">00532</span></td>
+                      <td>
+                        <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
+                      </td>
+                      <td><span>+0.48%</span></td>
+                    </tr>
+                    <tr class="fiq-up">
+                      <td>삼성전자 <span class="txt-num">00532</span></td>
+                      <td>
+                        <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
+                      </td>
+                      <td><span>+0.48%</span></td>
+                    </tr>
+                    <tr class="fiq-up">
+                      <td>삼성전자 <span class="txt-num">00532</span></td>
+                      <td>
+                        <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
+                      </td>
+                      <td><span>+0.48%</span></td>
+                    </tr>
+                    <tr class="fiq-up">
+                      <td>삼성전자 <span class="txt-num">00532</span></td>
+                      <td>
+                        <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
+                      </td>
+                      <td><span>+0.48%</span></td>
+                    </tr>
+                    <tr class="fiq-down">
+                      <td>삼성전자 <span class="txt-num">00532</span></td>
+                      <td>
+                        <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
+                      </td>
+                      <td><span>+0.48%</span></td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+
+                <!-- ####### 리포트 탭 #######-->
+                <div class="fiq-cont fiq-cont4">
+                  <div class="fiq-bo-sec">
+                    <ul>
+                      <li>
+                        <div class="fiq-img"><span style="background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
+                        <div class="fiq-r">
+                          <div class="fiq-top">
+                            <p class="fiq-pop-on">삼성전자 <span class="txt-num fiq-code">005930</span><a>/ 동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
+                            <ul>
+                              <li class="fiq-up">
+                                <p><span>투자의견</span> <span class="fiq-s">매수</span></p>
+                                <p>
+                                  <span>목표주가</span>10,000
+                                  <span class="fiq-indi fiq-down"></span>
+                                </p>
+                                <p><span>작성자</span>홍길동</p>
+                                <p><span>발행기관</span>미래에셋증권</p>
+                                <p><span>발표일</span>2022-02-08</p>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                        <a class="fiq-download"></a>
+                      </li>
+                      <li>
+                        <div class="fiq-img"><span style="background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
+                        <div class="fiq-r">
+                          <div class="fiq-top">
+                            <p class="fiq-pop-on">삼성전자 <span class="txt-num fiq-code">005930</span><a>/ 동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
+                            <ul>
+                              <li>
+                                <p><span>투자의견</span> <span class="fiq-s">유지</span></p>
+                                <p>
+                                  <span>목표주가</span>10,000
+                                  <span class="fiq-indi fiq-down"></span>
+                                </p>
+                                <p><span>작성자</span>홍길동</p>
+                                <p><span>발행기관</span>미래에셋증권</p>
+                                <p><span>발표일</span>2022-02-08</p>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                        <a class="fiq-download"></a>
+                      </li>
+                      <li>
+                        <div class="fiq-img"><span style="background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
+                        <div class="fiq-r">
+                          <div class="fiq-top">
+                            <p class="fiq-pop-on">삼성전자 <span class="txt-num fiq-code">005930</span><a>/ 동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
+                            <ul>
+                              <li class="fiq-down">
+                                <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
+                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                                <p><span>작성자</span>홍길동</p>
+                                <p><span>발행기관</span>미래에셋증권</p>
+                                <p><span>발표일</span>2022-02-08</p>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                        <a class="fiq-download"></a>
+                      </li>
+                      <li>
+                        <div class="fiq-img"><span style="background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
+                        <div class="fiq-r">
+                          <div class="fiq-top">
+                            <p class="fiq-pop-on">삼성전자 <span class="txt-num fiq-code">005930</span><a>/ 동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
+                            <ul>
+                              <li class="fiq-down">
+                                <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
+                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                                <p><span>작성자</span>홍길동</p>
+                                <p><span>발행기관</span>미래에셋증권</p>
+                                <p><span>발표일</span>2022-02-08</p>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                        <a class="fiq-download"></a>
+                      </li>
+                      <li>
+                        <div class="fiq-img"><span style="background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
+                        <div class="fiq-r">
+                          <div class="fiq-top">
+                            <p class="fiq-pop-on">삼성전자 <span class="txt-num fiq-code">005930</span><a>/ 동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
+                            <ul>
+                              <li class="fiq-down">
+                                <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
+                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                                <p><span>작성자</span>홍길동</p>
+                                <p><span>발행기관</span>미래에셋증권</p>
+                                <p><span>발표일</span>2022-02-08</p>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                        <a class="fiq-download"></a>
+                      </li>
+                      <li>
+                        <div class="fiq-img"><span style="background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
+                        <div class="fiq-r">
+                          <div class="fiq-top">
+                            <p class="fiq-pop-on">삼성전자 <span class="txt-num fiq-code">005930</span><a>/ 동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
+                            <ul>
+                              <li class="fiq-down">
+                                <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
+                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                                <p><span>작성자</span>홍길동</p>
+                                <p><span>발행기관</span>미래에셋증권</p>
+                                <p><span>발표일</span>2022-02-08</p>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                        <a class="fiq-download"></a>
+                      </li>
+                      <li>
+                        <div class="fiq-img"><span style="background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
+                        <div class="fiq-r">
+                          <div class="fiq-top">
+                            <p class="fiq-pop-on">삼성전자 <span class="txt-num fiq-code">005930</span><a>/ 동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
+                            <ul>
+                              <li class="fiq-down">
+                                <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
+                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                                <p><span>작성자</span>홍길동</p>
+                                <p><span>발행기관</span>미래에셋증권</p>
+                                <p><span>발표일</span>2022-02-08</p>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                        <a class="fiq-download"></a>
+                      </li>
+                    </ul>
+                  </div>
+                  <a class="fiq-more">더보기</a>
                 </div>
               </div>
             </div>
@@ -481,6 +682,76 @@
       </div>
 
 
+      <div class="fiq-popup">
+        <div class="fiq-dim">
+          <div class="fiq-inner">
+            <div class="fiq-top-tit"><p>삼성전자 <span class="txt-num fiq-code">005930</span></p></div>
+            <p class="fiq-tit">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 동해물과 백두산이 마르고 닳도록 하느님이 보우하사</p>
+            <div class="graph">
+              <img src="/img/mo/graph3.png" alt="" style="width: 100%;height: 100%;display: inline-block;">
+            </div>
+
+
+
+            <!-- ####################### 3.14 수정 #########################-->
+            <!--##### p태그에 fiq-up이면 상승-->
+            <!--##### p태그에 fiq-down이면 하락-->
+            <!--##### p태그에 fiq-stay이면 유지-->
+            <ul>
+              <li>
+                <p>상장시장</p>
+                <p>유가증권</p>
+              </li>
+              <li>
+                <p>업종</p>
+                <p>전기전자</p>
+              </li>
+              <li>
+                <p>투자의견</p>
+                <p class="fiq-up">매수</p>
+              </li>
+              <li>
+                <p>목표주가</p>
+                <p class="fiq-down">10,000원(상향)</p>
+              </li>
+              <li>
+                <p>작성자</p>
+                <p>홍길동</p>
+              </li>
+              <li>
+                <p>발행기관</p>
+                <p>미래에셋증권</p>
+              </li>
+              <li>
+                <p>발표일</p>
+                <p>YYYY-MM-DD</p>
+              </li>
+              <li>
+                <p>다운로드</p>
+                <p><a></a></p>
+              </li>
+            </ul>
+            <!-- ####################### 3.14 수정 끝#########################-->
+
+
+
+            <h2 class="fiq-h2">레포트 주요내용</h2>
+            <p class="fiq-txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos.</p>
+            <a class="fiq-close"><span></span></a>
+          </div>
+        </div>
+      </div>
+<!-- -------------------------####### 03.19 수정 끝 #######-->
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -651,7 +922,30 @@
     </div>
   </div>
 </div>
+
+
 <script src="js/fiq-polyfill.js"></script>
 <script src="js/fiq-common-mo.js"></script>
+
+
+
+
+
+
+<!-- -------------------------####### 03.19 수정 #######-->
+<script>
+  let popOpen = document.querySelectorAll('.fiq-pop-on');
+  let popup = document.querySelector('.fiq-popup');
+  let close = popup.querySelector('.fiq-close');
+  Array.prototype.forEach.call(popOpen, function(e) {
+    e.addEventListener('click', function() {
+      popup.classList.add('fiq-open');
+    })
+  });
+  close.addEventListener('click', function() {
+    popup.classList.remove('fiq-open');
+  });
+</script>
+<!-- -------------------------####### 03.19 수정 끝 #######-->
 </body>
 </html>
