--- a/page14-mo.html
+++ b/page14-mo.html
@@ -44,21 +44,45 @@
     <div class="inner">
       <!-- **********외주 콘텐츠 작업 영역********** -->
 
-      <div class="fiq-wrap">
+
+
+
+
+
+<!-- ####### 3.16 수정 fiq-wrap클래스에 fiq-newly 추가#######-->
+      <div class="fiq-wrap fiq-newly">
         <article class="fiq-article fiq-m14">
           <section class="fiq-section fiq-sec1">
-            <div class="fiq-tab-wrap fiq-tab-wrap1 fiq-tab-active1"></div>
-            <div class="fiq-cont fiq-cont1">
-              <div class="fiq-inner-tab-wrap fiq-inner-tab-wrap1 fiq-inner-tabs-2n fiq-inner-active1">
-                <a class="fiq-a fiq-inner-tab fiq-inner-tab1">코스피</a>
-                <a class="fiq-a fiq-inner-tab fiq-inner-tab2">코스닥</a>
-              </div>
 
-              <div class="fiq-select">
+
+            <div class="fiq-tab-wrap fiq-tab-wrap1 fiq-tab-active1">
+              <a class="fiq-a fiq-tab fiq-tab1">코스피</a>
+              <a class="fiq-a fiq-tab fiq-tab2">코스닥</a>
+            </div>
+
+            <div class="fiq-cont fiq-cont1">
+              <span class="fiq-select">
                 <select>
                   <option value="">업종선택</option>
                 </select>
+              </span>
+              <div class="fiq-cont-inner-wrap fiq-cont-inner-wrap1">
+                <p style="font-size: 20px; text-align: center; width: 100%;height: 100vw;background: #D9EFFF;">코스피 마켓맵</p>
               </div>
+              <div class="fiq-cont-inner-wrap fiq-cont-inner-wrap2">
+                <p style="font-size: 20px; text-align: center; width: 100%;height: 100vw;background: #D9EFFF;">코스닥 마켓맵</p>
+              </div>
+            </div>
+
+
+
+
+            <div class="fiq-cont fiq-cont2">
+              <span class="fiq-select">
+                <select>
+                  <option value="">업종선택</option>
+                </select>
+              </span>
               <div class="fiq-cont-inner-wrap fiq-cont-inner-wrap1">
                 <p style="font-size: 20px; text-align: center; width: 100%;height: 100vw;background: #D9EFFF;">코스피 마켓맵</p>
               </div>
@@ -70,7 +94,7 @@
           </section>
         </article>
       </div>
-
+<!-- ####### 3.16 수정 끝 #######-->
 
 
 
