--- a/page2-2-pc.html
+++ b/page2-2-pc.html
@@ -328,18 +328,24 @@
     <!-- [D] 파이낸셜아이큐 클래스 : .fiq-* 사용 -->
   <div id="container" class="fiq-container">
     <div class="inner">
-      <div class="fiq-wrap">
+
+<!-- ####### 3.16 수정 fiq-wrap클래스에 fiq-newly 추가#######-->
+      <div class="fiq-wrap fiq-newly">
         <article class="fiq-article fiq-page1s">
           <section class="fiq-section">
-            <div class="fiq-top-wrap">
-              <h3 class="fiq-h3-2">외국인매매</h3>
-              <div class="fiq-date">
-                <p class="fiq-date-time txt-num"></p>
-                <p>20분 지연</p>
-              </div>
-            </div>
 
-            <div class="fiq-tab-wrap fiq-tab-wrap1 fiq-tab2n fiq-tab1-active">
+<!-- ####### 3.16 수정 끝 #######-->
+
+
+
+<!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
+            <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap1 fiq-tab2n fiq-tab1-active" style="text-align: left;margin-top: 50px;">
+<!-- ####### 3.16 수정 끝 #######-->
+
+
+
+
+
               <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">코스피</a>
               <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
             </div>
@@ -375,7 +381,7 @@
                 <!-- ####### td에 fiq-up클래스 들어가면 상승 빨간색 #######-->
                 <!-- ####### td에 fiq-down클래스 들어가면 하락 파란색 #######-->
                 <tbody>
-                  <tr>
+                  <tr class="fiq-up">
                     <td>SK하이닉스</td>
                     <td class="txt-num">1,731</td>
                     <td class="txt-num">193,857</td>
@@ -395,7 +401,7 @@
                     <td class="txt-num">69,445</td>
                     <td class="fiq-down txt-num">-1.16%</td>
                   </tr>
-                  <tr>
+                  <tr class="fiq-down">
                     <td>크래프톤</td>
                     <td class="txt-num">21,721</td>
                     <td class="txt-num">69,445</td>
