--- a/page2-4-pc.html
+++ b/page2-4-pc.html
@@ -328,10 +328,18 @@
     <!-- [D] 파이낸셜아이큐 클래스 : .fiq-* 사용 -->
   <div id="container" class="fiq-container">
     <div class="inner">
-      <div class="fiq-wrap">
-        <article class="fiq-article fiq-page1s">
-          <section class="fiq-section">
 
+<!-- ####### 3.16 수정 fiq-wrap클래스에 fiq-newly 추가#######-->
+      <div class="fiq-wrap fiq-newly">
+        <article class="fiq-article fiq-page1s">
+
+          <div class="fiq-top-title">
+            <h2 class="fiq-h2">매매동향</h2>
+            <span class="fiq-h2-span">※ 당일 종목별 매매상위 5개 회원사 정보를 이용한 추정치임</span>
+          </div>
+
+
+          <section class="fiq-section">
             <div class="fiq-tabs-wrap fiq-tabs-wrap1 fiq-tabs-wrap-4n fiq-top-active1">
               <a class="fiq-a fiq-top-tab fiq-top-tab1" data-tab-cl="1">투자주체별동향</a>
               <a class="fiq-a fiq-top-tab fiq-top-tab2" data-tab-cl="2">프로그램매매동향</a>
@@ -341,15 +349,11 @@
 
             <!-- ####### 투자주체별동향 탭 #######-->
             <div class="fiq-tab-sibl fiq-tab-sibl1">
-              <div class="fiq-top-wrap">
-                <h3 class="fiq-h3-2">투자주체별 동향</h3>
-                <div class="fiq-date">
-                  <p class="fiq-date-time txt-num"></p>
-                  <p>20분 지연</p>
-                </div>
-              </div>
 
-              <div class="fiq-tab-wrap fiq-tab-wrap1 fiq-tab2n fiq-tab1-active">
+
+
+<!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
+              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap1 fiq-tab2n fiq-tab1-active">
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">업종별</a>
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">일자별</a>
               </div>
@@ -375,9 +379,9 @@
                     <th scope="col" rowspan="2">업종</th>
                     <th scope="col" rowspan="2">개인</th>
                     <th scope="col" rowspan="2">외국인</th>
-                    <th scope="col" rowspan="2" style="border-right:1px solid #ddd;">기관계</th>
+                    <th scope="col" rowspan="2">기관계</th>
                     <th scope="col" colspan="7">증권</th>
-                    <th scope="col" rowspan="2" style="border-left:1px solid #ddd;">기타법인</th>
+                    <th scope="col" rowspan="2">기타법인</th>
                   </tr>
                   <tr>
                     <th scope="col">증권</th>
@@ -392,7 +396,7 @@
                   <!-- ####### td에 fiq-up클래스 들어가면 상승 빨간색 #######-->
                   <!-- ####### td에 fiq-down클래스 들어가면 하락 파란색 #######-->
                   <tbody>
-                  <tr>
+                  <tr class="fiq-up">
                     <td>KOSPI</td>
                     <td class="fiq-up txt-num">190,171</td>
                     <td class="fiq-up txt-num">275</td>
@@ -406,7 +410,7 @@
                     <td class="fiq-down txt-num">-2,119</td>
                     <td class="fiq-down txt-num">-2,034</td>
                   </tr>
-                  <tr>
+                  <tr class="fiq-down">
                     <td>종합주가<br> 지수(KOSPI)</td>
                     <td class="fiq-up txt-num">190,171</td>
                     <td class="fiq-up txt-num">275</td>
@@ -556,9 +560,9 @@
                     <th scope="col" rowspan="2">업종</th>
                     <th scope="col" rowspan="2">개인</th>
                     <th scope="col" rowspan="2">외국인</th>
-                    <th scope="col" rowspan="2" style="border-right:1px solid #ddd;">기관계</th>
+                    <th scope="col" rowspan="2">기관계</th>
                     <th scope="col" colspan="7">증권</th>
-                    <th scope="col" rowspan="2" style="border-left:1px solid #ddd;">기타법인</th>
+                    <th scope="col" rowspan="2">기타법인</th>
                   </tr>
                   <tr>
                     <th scope="col">증권</th>
@@ -726,15 +730,8 @@
 
             <!-- ####### 프로그램매매동향 탭 #######-->
             <div class="fiq-tab-sibl fiq-tab-sibl2">
-              <div class="fiq-top-wrap">
-                <h3 class="fiq-h3-2">프로그램매매동향</h3>
-                <div class="fiq-date">
-                  <p class="fiq-date-time txt-num"></p>
-                  <p>20분 지연</p>
-                </div>
-              </div>
 
-              <div class="fiq-tab-wrap fiq-tab-wrap2 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap2 fiq-tab2n fiq-tab1-active">
                 <a class="fiq-a fiq-tab2-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">업종별</a>
                 <a class="fiq-a fiq-tab2-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">일자별</a>
               </div>
@@ -760,9 +757,9 @@
                     <th scope="col" rowspan="2">업종</th>
                     <th scope="col" rowspan="2">개인</th>
                     <th scope="col" rowspan="2">외국인</th>
-                    <th scope="col" rowspan="2" style="border-right:1px solid #ddd;">기관계</th>
+                    <th scope="col" rowspan="2">기관계</th>
                     <th scope="col" colspan="7">증권</th>
-                    <th scope="col" rowspan="2" style="border-left:1px solid #ddd;">기타법인</th>
+                    <th scope="col" rowspan="2">기타법인</th>
                   </tr>
                   <tr>
                     <th scope="col">증권</th>
@@ -1111,15 +1108,7 @@
 
             <!-- ####### 외국인매매 탭 #######-->
             <div class="fiq-tab-sibl fiq-tab-sibl3">
-              <div class="fiq-top-wrap">
-                <h3 class="fiq-h3-2">외국인매매</h3>
-                <div class="fiq-date">
-                  <p class="fiq-date-time txt-num"></p>
-                  <p>20분 지연</p>
-                </div>
-              </div>
-
-              <div class="fiq-tab-wrap fiq-tab-wrap3 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap  fiq-tab-type-b fiq-tab-wrap3 fiq-tab2n fiq-tab1-active">
                 <a class="fiq-a fiq-tab3-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">업종별</a>
                 <a class="fiq-a fiq-tab3-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">일자별</a>
               </div>
@@ -1145,9 +1134,9 @@
                     <th scope="col" rowspan="2">업종</th>
                     <th scope="col" rowspan="2">개인</th>
                     <th scope="col" rowspan="2">외국인</th>
-                    <th scope="col" rowspan="2" style="border-right:1px solid #ddd;">기관계</th>
+                    <th scope="col" rowspan="2">기관계</th>
                     <th scope="col" colspan="7">증권</th>
-                    <th scope="col" rowspan="2" style="border-left:1px solid #ddd;">기타법인</th>
+                    <th scope="col" rowspan="2">기타법인</th>
                   </tr>
                   <tr>
                     <th scope="col">증권</th>
@@ -1496,15 +1485,8 @@
 
             <!-- ####### 외국인보유율 탭 #######-->
             <div class="fiq-tab-sibl fiq-tab-sibl4">
-              <div class="fiq-top-wrap">
-                <h3 class="fiq-h3-2">외국인보유율</h3>
-                <div class="fiq-date">
-                  <p class="fiq-date-time txt-num"></p>
-                  <p>20분 지연</p>
-                </div>
-              </div>
 
-              <div class="fiq-tab-wrap fiq-tab-wrap4 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap  fiq-tab-type-b fiq-tab-wrap4 fiq-tab2n fiq-tab1-active">
                 <a class="fiq-a fiq-tab4-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">업종별</a>
                 <a class="fiq-a fiq-tab4-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">일자별</a>
               </div>
@@ -1530,9 +1512,9 @@
                     <th scope="col" rowspan="2">업종</th>
                     <th scope="col" rowspan="2">개인</th>
                     <th scope="col" rowspan="2">외국인</th>
-                    <th scope="col" rowspan="2" style="border-right:1px solid #ddd;">기관계</th>
+                    <th scope="col" rowspan="2">기관계</th>
                     <th scope="col" colspan="7">증권</th>
-                    <th scope="col" rowspan="2" style="border-left:1px solid #ddd;">기타법인</th>
+                    <th scope="col" rowspan="2">기타법인</th>
                   </tr>
                   <tr>
                     <th scope="col">증권</th>
