--- a/page4-pc.html
+++ b/page4-pc.html
@@ -328,26 +328,34 @@
     <!-- [D] 파이낸셜아이큐 클래스 : .fiq-* 사용 -->
   <div id="container" class="fiq-container">
     <div class="inner">
-      <div class="fiq-wrap">
-        <article class="fiq-article fiq-page1s fiq-page4">
-          <section class="fiq-section">
-            <div class="fiq-top-wrap">
-              <h3 class="fiq-h3-2">마켓맵</h3>
-              <div class="fiq-date">
-                <p class="fiq-date-time txt-num"></p>
-                <p>20분 지연</p>
-              </div>
-            </div>
 
-            <div class="fiq-tab-wrap fiq-tab-wrap1 fiq-tab2n fiq-tab1-active">
+
+
+
+
+
+
+<!-- ####### 3.16 수정 fiq-wrap클래스에 fiq-newly 추가#######-->
+      <div class="fiq-wrap fiq-newly">
+        <article class="fiq-article fiq-page1s fiq-page4">
+          <div class="fiq-top-title">
+            <h2 class="fiq-h2">마켓맵</h2>
+          </div>
+          <section class="fiq-section"">
+<!-- ####### 3.16 수정 끝 #######-->
+
+
+
+<!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
+            <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap1 fiq-tab2n fiq-tab1-active">
               <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">코스피</a>
               <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
             </div>
-            <div class="fiq-select">
+            <span class="select-style select-style5">
               <select class="fiq-se">
                 <option value="">업종선택</option>
               </select>
-            </div>
+            </span>
 
             <div class="fiq-cont fiq-cont1">
               <div class="fiq-graph">
@@ -379,7 +387,7 @@
                 <!-- ####### td에 fiq-up클래스 들어가면 상승 빨간색 #######-->
                 <!-- ####### td에 fiq-down클래스 들어가면 하락 파란색 #######-->
                 <tbody>
-                <tr>
+                <tr class="fiq-up">
                   <td>삼성전자</td>
                   <td class="txt-num">72,000</td>
                   <td class="txt-num">1,000</td>
